<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dany.movies.view.AddMovieActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorAccent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_add_movie"
            android:textSize="24sp"
            android:textColor="@android:color/white" />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:text="@string/name_add"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:gravity="start|center_vertical"
                    android:paddingStart="10dp"/>
                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="18sp"
                    android:textColor="@android:color/black" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:text="@string/actors_add"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:gravity="start|center_vertical"
                    android:paddingStart="10dp"/>
                <EditText
                    android:id="@+id/editTextActors"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="18sp"
                    android:textColor="@android:color/black" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:text="@string/director_add"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:gravity="start|center_vertical"
                    android:paddingStart="10dp"/>
                <EditText
                    android:id="@+id/editTextDirector"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="18sp"
                    android:textColor="@android:color/black" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:text="@string/year_add"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:gravity="start|center_vertical"
                    android:paddingStart="10dp"/>
                <EditText
                    android:id="@+id/editTextYear"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:inputType="number"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:text="@string/genre_add"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:gravity="start|center_vertical"
                    android:paddingStart="10dp"/>
                <TextView
                    android:id="@+id/textViewGenre"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/select"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:gravity="center"/>
            </LinearLayout>
            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="1"
                android:layout_gravity="end"/>
        </LinearLayout>
    </ScrollView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:backgroundTint="@color/colorAccent"
        android:elevation="6dp"
        app:srcCompat="@mipmap/ic_done_white_24dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"/>

    <FrameLayout
        android:id="@+id/frame_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</RelativeLayout>
