<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dany.movies.view.AddMovieActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">

    </LinearLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/popcorn"
        android:scaleType="centerInside"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/title_movie"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:background="@color/red"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:text="@string/name_add"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:gravity="start|center_vertical"
                    android:paddingStart="10dp"/>
                <TextView
                    android:id="@+id/textViewName"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="2"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:gravity="start|center_vertical"
                    android:paddingEnd="10dp" />
                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:visibility="gone"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:text="@string/actors_add"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:gravity="start|center_vertical"
                    android:paddingStart="10dp"/>
                <TextView
                    android:id="@+id/textViewActors"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="2"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:gravity="start|center_vertical"
                    android:paddingEnd="10dp"/>
                <EditText
                    android:id="@+id/editTextActors"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:visibility="gone"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:text="@string/director_add"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:gravity="start|center_vertical"
                    android:paddingStart="10dp"/>
                <TextView
                    android:id="@+id/textViewDirector"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="2"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:gravity="start|center_vertical"
                    android:paddingEnd="10dp" />
                <EditText
                    android:id="@+id/editTextDirector"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:visibility="gone"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:text="@string/year_add"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:gravity="start|center_vertical"
                    android:paddingStart="10dp"/>
                <TextView
                    android:id="@+id/textViewYear"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="2"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:gravity="start|center_vertical"
                    android:paddingEnd="10dp" />
                <EditText
                    android:id="@+id/editTextYear"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:inputType="number"
                    android:visibility="gone"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:text="@string/genre_add"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:gravity="start|center_vertical"
                    android:paddingStart="10dp"/>
                <TextView
                    android:id="@+id/textViewGenre"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:gravity="start"/>
            </LinearLayout>
            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="1"
                android:isIndicator="true"
                android:layout_gravity="center"
                android:progressTint="@color/yellow"/>
        </LinearLayout>
    </ScrollView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButtonEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:backgroundTint="@color/red"
        android:elevation="6dp"
        app:srcCompat="@drawable/ic_mode_edit_black_24dp"
        android:tint="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"/>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButtonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:backgroundTint="@color/red"
        android:elevation="6dp"
        app:srcCompat="@drawable/ic_delete_black_24dp"
        android:tint="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"/>

    <FrameLayout
        android:id="@+id/frame_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</RelativeLayout>